--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,13 +28,13 @@ p {
 
 table {
     margin-left: 20px;
-    padding-right: 20px;
-    margin-right: 20px;
+    /*padding-right: 20px;*/
+    margin-right: 40px;
 }
 
 tbody {
     margin-right: 20px;
-    padding-right: 20px;
+    /*padding-right: 20px;*/
     margin-right: 20px;
 }
 
